<resources>
    <string name="app_name">ParkingHelper</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_signin">SigninActivity</string>

    <!-- Strings for signin page -->
    <string name="SigninUsername">Enter your username</string>
    <string name="SigninPassword">Enter your password</string>
    <string name="SigninEmail">Enter your email (example@example.com)</string>
    <string name="SigninCellPhone">Enter your cell phone ((abc)abc-abcd))</string>
    <string name="SigninHomePhone">Enter your home phone ((abc)abc-abcd))</string>
    <string name="title_activity_homepage">HomepageActivity</string>
    <string name="title_activity_account_acitivity">AccountAcitivity</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="title_activity_own_stalls_with_bids">OwnStallsWithBidsActivity</string>
    <string name="title_activity_bids_for_stall">BidsForStall</string>
    <string name="title_activity_add_stall">AddStall</string>
    <string name="title_activity_profile">Profile</string>
    <string name="title_activity_edit_stall">EditStall</string>
    <string name="title_activity_your_bids">YourBids</string>
    <string name="title_activity_edit_bids">EditBids</string>
    <string name="title_activity_bid_stall">BidStall</string>
    <string name="title_activity_edit_stall_for_test">EditStallForTest</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_edit_stall_for_testing">EditStallForTesting</string>
    <string name="title_activity_borrow_stall">BorrowStallActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_reviews">ReviewsActivity</string>
    <string name="title_activity_returning_stall">ReturningStallActivity</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_lending_stall">LendingStallActivity</string>
</resources>
