<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="cmput301w16t01crimsonhorizons.parkinghelper.SigninActivity"
    tools:showIn="@layout/activity_signin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Sign in"
        android:id="@+id/SigninTitle"
        android:textSize="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SigninUsername"
        android:layout_marginTop="37dp"
        android:id="@+id/UsernameEditTxt"
        android:layout_below="@+id/SigninTitle"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SigninPassword"
        android:inputType="textPassword"
        android:id="@+id/SigninPasswordEditTxt"
        android:layout_below="@+id/UsernameEditTxt"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SigninEmail"
        android:inputType="textEmailAddress"
        android:id="@+id/EmailEditTxt"
        android:layout_below="@+id/SigninPasswordEditTxt"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SigninCellPhone"
        android:inputType="phone"
        android:id="@+id/CellPhonEditTxt"
        android:layout_below="@+id/EmailEditTxt"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/SigninHomePhone"
        android:inputType="phone"
        android:id="@+id/HomePhonEditTxt"
        android:layout_below="@+id/CellPhonEditTxt"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Account"
        android:id="@+id/CreateAccountBtn"
        android:layout_marginTop="47dp"
        android:layout_below="@+id/HomePhonEditTxt"
        android:layout_alignStart="@+id/SigninTitle"
        android:onClick="clickSignin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancel"
        android:id="@+id/CancelBtn"
        android:layout_below="@+id/CreateAccountBtn"
        android:layout_centerHorizontal="true"
        android:onClick="clickCancel"/>


</RelativeLayout>
